--- a/html/index.pug
+++ b/html/index.pug
@@ -1,6 +1,7 @@
 doctype html
 html(lang="en")
   head
+    link(rel="stylesheet" href="bootstrap.min.css")
     link(rel="stylesheet" href="main.css")
 
   body
