--- a/html/index.pug
+++ b/html/index.pug
@@ -18,7 +18,7 @@ html(lang="en")
           #lists-btn-wrapper.dropup
             #selected-list.btn.uppercase.dropdown-toggle(data-toggle="dropdown" aria-haspopup="true" aria-expanded="false")
             ul#lists-tasks.dropdown-menu(aria-labelledby="dropdownMenu")
-        img#ic-camera.ic(src="icons/camera.svg")
+        //- img#ic-camera.ic(src="icons/camera.svg")
         img#ic-list.ic(src="icons/list.svg")
 
 
